--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
   </head>
   <body>
     <header>
-      <a href="/">
-        <p><span>Web</span>Studio</p>
-      </a>
-
       <nav>
         <ul>
+          <li>
+            <a href="./index.html">
+              <p>WebStudio</p>
+            </a>
+          </li>
           <li><a href="#studio">Studio</a></li>
           <li><a href="#portfolio">Portfolio</a></li>
           <li><a href="#contacts">Contacts</a></li>
@@ -20,8 +21,10 @@
       </nav>
 
       <address>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
       </address>
     </header>
     <main>
@@ -115,8 +118,8 @@
       </section>
     </main>
     <footer>
-      <a href="/">
-        <p><span>Web</span>Studio</p>
+      <a href="./index.html">
+        <p>WebStudio</p>
       </a>
 
       <p>
